# flp-tools

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  CNAME  Makefile  README.md  index.md
.github/workflows/: docker-test.yml  linux.yml  os-test.yml  test.yml
docker/compose/test/: docker-compose.yml  entrypoint.sh
docker/dev/: Dockerfile  build.yml
docs/: index.html  index.md
docs/dev/: Doxyfile
docs/dev/development/: annotated.html  classes.html  classoptasio_1_1flp_1_1FLPSolver_aed8a9aa064d88c6415a8712876a70765_icgraph.map  classoptasio_1_1flp_1_1RationalExpr__coll__graph.md5  classoptasio_1_1flp_1_1RationalExpr_a11b22a4b2b6ddd78422624d11b30f8e4_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_a1a8e2bcc0cce15c048ee603db80780a5_cgraph.map  classoptasio_1_1flp_1_1RationalExpr_a1a8e2bcc0cce15c048ee603db80780a5_cgraph.md5  classoptasio_1_1flp_1_1RationalExpr_a1a8e2bcc0cce15c048ee603db80780a5_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_a1cb61993d8af71626feba5c22a6c1144_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a7e62a4db06a93c0e79b304c9796c01d5_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a7e62a4db06a93c0e79b304c9796c01d5_icgraph.md5  dir_000001_000000.html  flp__objective_8hpp_source.html  flp__solver_8hpp.html  flp__solver_8hpp__incl.md5  flp__solver__test_8cpp_abeb128ec0a7f84ec3b55fd58002a8a48_cgraph.md5  functions.html  functions_func.html  graph_legend.html  index.html  inherit_graph_0.map  namespaceoperations__research_a0da2cc6eaa167880858e15a5f91ad212_icgraph.map  namespaceoptasio.html  namespaceoptasio_1_1flp.html  namespaceoptasio_1_1flp_a0650982c656bf34c92eb20d1e470d0b4_icgraph.map  namespaceoptasio_1_1flp_a0650982c656bf34c92eb20d1e470d0b4_icgraph.md5  namespaceoptasio_1_1flp_a9574272eb0ab52fd18de1639510bfaa1_icgraph.map  namespaceoptasio_1_1flp_a9574272eb0ab52fd18de1639510bfaa1_icgraph.md5  rational__expr__test_8cpp_aa4095a013703b826e0f45c409ddebdcb_cgraph.md5  rational__expr__test_8cpp_af6339455595e3ed7e8991408bb3b7757_cgraph.md5
docs/dev/html/: classoptasio_1_1flp_1_1FLPSolver.html  classoptasio_1_1flp_1_1FLPSolver__coll__graph.md5  classoptasio_1_1flp_1_1FLPSolver__inherit__graph.md5  classoptasio_1_1flp_1_1FLPSolver_a23cb95ecc1d8ef3a006658b5f0c9dedd_cgraph.map  classoptasio_1_1flp_1_1RationalExpr_a1a8e2bcc0cce15c048ee603db80780a5_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a23c1cff0d3fc2e3bd14570e120f71323_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_ad0d19452314fc1a433714e9ab1e5fb38_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_aea2d83cde3a2db0291b3e41dd6fcd1c7_icgraph.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  flp__solver_8cpp__incl.map  flp__solver_8hpp__dep__incl.map  flp__solver_8hpp__dep__incl.md5  flp__solver_8hpp_source.html  flp__solver__test_8cpp__incl.md5  hierarchy.html  inherit_graph_0.md5  menudata.js  namespacemembers.html  namespaceoperations__research_a0da2cc6eaa167880858e15a5f91ad212_cgraph.map  rational__expr_8cpp.html  rational__expr_8cpp__incl.md5  rational__expr_8hpp__incl.md5  rational__expr_8hpp_source.html  rational__expr__test_8cpp.html  rational__expr__test_8cpp__incl.md5  rational__expr__test_8cpp_a3e8ae348300ddd1eae8910f80c84769f_cgraph.md5  rational__expr__test_8cpp_ab20a38153c30226fa2e549fe8db0df77_cgraph.md5  rational__expr__test_8cpp_source.html
docs/development/: index.md
docs/development/dev/: classoptasio_1_1flp_1_1FLPSolver-members.html  classoptasio_1_1flp_1_1FLPSolver__coll__graph.map  classoptasio_1_1flp_1_1FLPSolver_a23cb95ecc1d8ef3a006658b5f0c9dedd_cgraph.md5  classoptasio_1_1flp_1_1FLPSolver_aed8a9aa064d88c6415a8712876a70765_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr-members.html  classoptasio_1_1flp_1_1RationalExpr.html  classoptasio_1_1flp_1_1RationalExpr_a11b22a4b2b6ddd78422624d11b30f8e4_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a1cb61993d8af71626feba5c22a6c1144_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_a23c1cff0d3fc2e3bd14570e120f71323_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a79de431a76b09e974b68352ce80ca8fc_icgraph.map  classoptasio_1_1flp_1_1RationalExpr_a79de431a76b09e974b68352ce80ca8fc_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_ad0d19452314fc1a433714e9ab1e5fb38_cgraph.map  classoptasio_1_1flp_1_1RationalExpr_ad0d19452314fc1a433714e9ab1e5fb38_cgraph.md5  classoptasio_1_1flp_1_1RationalExpr_ad0d19452314fc1a433714e9ab1e5fb38_icgraph.md5  classoptasio_1_1flp_1_1RationalExpr_aea2d83cde3a2db0291b3e41dd6fcd1c7_icgraph.map  flp__objective_8cpp.html  flp__objective_8cpp_source.html  flp__objective_8hpp.html  flp__solver_8cpp.html  flp__solver_8cpp__incl.md5  flp__solver_8cpp_source.html  flp__solver_8hpp__incl.map  flp__solver__test_8cpp.html  flp__solver__test_8cpp__incl.map  flp__solver__test_8cpp_abeb128ec0a7f84ec3b55fd58002a8a48_cgraph.map  flp__solver__test_8cpp_source.html  functions_vars.html  globals.html  globals_func.html  inherit_graph_1.md5  inherits.html  namespacemembers_func.html  namespaceoperations__research.html  namespaceoperations__research_a0da2cc6eaa167880858e15a5f91ad212_cgraph.md5  namespaces.html  (+12 more)
docs/user/: Doxyfile
src/: CMakeLists.txt  flp_solver.cpp  flp_solver.hpp  rational_expr.cpp  rational_expr.hpp
test/: CMakeLists.txt  flp_solver_test.cpp  rational_expr_test.cpp
tests/: rational_expr_test.cpp
upstream/doc/: Doxyfile
(+52 files in other folders)
